# secret_recovery

./: .gitignore  Cargo.toml  README.md  bun.lockb  dfx.json  did.sh
encrypted-notes-dapp-vetkd/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deploy_locally.sh  deploy_locally_impl.sh  dfx.json.template  package-lock.json  package.json  pre_deploy.sh  provision-darwin.sh  rollup.config.js  security-checklist.md  tailwind.config.js  test_whoami.sh  vetkd_system_api.did
encrypted-notes-dapp-vetkd/src/encrypted_notes_motoko/: main.mo
encrypted-notes-dapp-vetkd/src/encrypted_notes_rust/: Cargo.toml
encrypted-notes-dapp-vetkd/vetkd_user_lib/: README.md  ic_vetkd_utils.js
responsive-halloween-website/: index.html
responsive-halloween-website/assets/css/: styles.css
responsive-halloween-website/assets/js/: main.js
src/dkim_1_backend/: Cargo.toml  dkim_1_backend.did
src/dkim_1_backend/src/: lib.rs  resolver.rs
test_dkim/: README.md  bun.lockb  index.ts  package.json  txt.txt
test_dkim/dkim/: dkim.did.d.ts  dkim.did.js  index.js
test_dkim/dkim_1_backend/: dkim_1_backend.did.d.ts  dkim_1_backend.did.js  index.d.ts  index.js
vetkd/: .gitignore  Cargo.toml  Makefile  README.md  canister_ids.json  dfx.json  did.sh  package-lock.json  package.json  webpack.config.js
vetkd/src/app_backend/: Cargo.toml  vetkd_app_backend.did
vetkd/src/app_backend/src/: lib.rs  types.rs
vetkd/src/dkim/: Cargo.toml  dkim.did
vetkd/src/dkim/src/: email.rs  lib.rs  types.rs
vetkd/src/dkim_1_backend/: Cargo.toml
vetkd/src/system_api/: Cargo.toml
(+51 files in other folders)
