[package]
name = "dkim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
viadkim = {git="https://github.com/dipanshuhappy/viadkim"}
ic-stable-structures = "0.5.6"
sha3 = "0.10.8"
hex = "0.4"
fastrand = "2.0.0"
regex = "1"
